plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.amperus'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.11.0'


    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation group: "org.testcontainers", name: 'testcontainers', version: "${testcontainersVersion}"
    testImplementation group: "org.testcontainers", name: 'postgresql', version: "${testcontainersVersion}"
    testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: "${testcontainersVersion}"

    testImplementation group: 'org.assertj', name: 'assertj-core', version: "${assertJVersion}"
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junitVersion}"
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: "${junitVersion}"
    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.9.2'

}

tasks.named('test') {
    useJUnitPlatform()
}
